Change layout issues in index and design in tester

--- a/src/pages/index/Index.module.scss
+++ b/src/pages/index/Index.module.scss
@@ -16,7 +16,7 @@
 	// main
 	.mainWrapper {
 		justify-content: space-around;
-		padding: 0.5em;
+		padding-top: 0.5em;
 
 		//
 		.mainContent {
